fix: dropdown overflow hidden by header

--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -12,13 +12,14 @@
     margin-left: 1rem;
     margin-right: 1rem;
     border-radius: 0.7rem;
-    overflow: hidden;
     padding-right: 1rem;
 }
 
 .brand {
     background-color: #352924;
-    padding: 1rem;
+    padding: 0rem 1rem 0rem 1rem;
+    height: 70px;
+    border-radius: 0.75rem 0rem 0rem 0.75rem;
 }
 
 .logo {
@@ -118,6 +119,10 @@
         margin-left: 0rem;
         margin-right: 0rem;
         border-radius: 0rem;
+    }
+
+    .brand {
+        border-radius: 0;
     }
 
     .nav-btn {
